fix: z-index and opacity tweaks

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -72,6 +72,7 @@ canvas {
     transition: all 5s ease-in;
     backdrop-filter: blur(1px);
     background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
 }
 
 .bg-gray-900 {
